force-app/main/default/objects/Artefact__c/Artefact__c.object-meta.xml
<CustomObject>
    <label>Artefact</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artefacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>