force-app/main/default/objects/Artefact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master detail relationship between account and artefact</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Artefacts</relationshipLabel>
    <relationshipName>Artefacts</relationshipName>
    <type>Lookup</type>
</CustomField>