force-app/main/default/objects/Artefact__c/fields/Additional_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Additional_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Invoice</label>
    <type>Checkbox</type>
</CustomField>