force-app/main/default/objects/Artefact__c/fields/AmountLine2ExGST__c.field-meta.xml
<CustomField>
    <fullName>AmountLine2ExGST__c</fullName>
    <label>Amount Line 2 (ex. GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>