force-app/main/default/objects/Artefact__c/fields/ApplicantFirstName__c.field-meta.xml
<CustomField>
    <fullName>ApplicantFirstName__c</fullName>
    <formula>Project__r.ApplicantContact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant First Name</label>
    <type>Text</type>
</CustomField>