force-app/main/default/objects/Artefact__c/fields/ApplicantLastName__c.field-meta.xml
<CustomField>
    <fullName>ApplicantLastName__c</fullName>
    <formula>Project__r.ApplicantContact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Last Name</label>
    <type>Text</type>
</CustomField>