force-app/main/default/objects/Artefact__c/fields/ApplicantSAPCustomer__c.field-meta.xml
<CustomField>
    <fullName>ApplicantSAPCustomer__c</fullName>
    <formula>Account__r.SAPCustomer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Customer</label>
    <type>Text</type>
</CustomField>