force-app/main/default/objects/Artefact__c/fields/Electronic_Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Payment_Link__c</fullName>
    <label>Electronic Payment Link</label>
    <type>Url</type>
</CustomField>