force-app/main/default/objects/Artefact__c/fields/ElectronicPaymentReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ElectronicPaymentReferenceNumber__c</fullName>
    <label>Electronic Payment Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>