force-app/main/default/objects/Artefact__c/fields/HasFiles__c.field-meta.xml
<CustomField>
    <fullName>HasFiles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Files?</label>
    <type>Checkbox</type>
</CustomField>