force-app/main/default/objects/Artefact__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <description>Invoice number</description>
    <label>Invoice number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>