force-app/main/default/objects/Artefact__c/fields/InvoiceTypeLine2__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTypeLine2__c</fullName>
    <label>Invoice Type Line 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoice_Type</valueSetName>
    </valueSet>
</CustomField>