force-app/main/default/objects/Artefact__c/fields/IsPayNow__c.field-meta.xml
<CustomField>
    <fullName>IsPayNow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to identify if the first invoice was paid through Westpac. It is populated when the project is created and applies for the first invoice.</description>
    <label>Is Pay Now?</label>
    <type>Checkbox</type>
</CustomField>