force-app/main/default/objects/Artefact__c/fields/Make_a_payment_fx__c.field-meta.xml
<CustomField>
    <fullName>Make_a_payment_fx__c</fullName>
    <formula>Project__r.Make_a_payment_fx__c</formula>
    <label>Make a payment</label>
    <type>Text</type>
</CustomField>