force-app/main/default/objects/Artefact__c/fields/MasterNotificationNumber__c.field-meta.xml
<CustomField>
    <fullName>MasterNotificationNumber__c</fullName>
    <label>Master Notification Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>