force-app/main/default/objects/Artefact__c/fields/MaterialCodeLine1__c.field-meta.xml
<CustomField>
    <fullName>MaterialCodeLine1__c</fullName>
    <label>Material Code Line 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>InvoiceTypeLine1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Material_Code</valueSetName>
    </valueSet>
</CustomField>