force-app/main/default/objects/Artefact__c/fields/MaterialCodeLine2__c.field-meta.xml
<CustomField>
    <fullName>MaterialCodeLine2__c</fullName>
    <label>Material Code Line 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>InvoiceTypeLine2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Material_Code</valueSetName>
    </valueSet>
</CustomField>