force-app/main/default/objects/Artefact__c/fields/MaterialCodeLine3__c.field-meta.xml
<CustomField>
    <fullName>MaterialCodeLine3__c</fullName>
    <label>Material Code Line 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>InvoiceTypeLine3__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Material_Code</valueSetName>
    </valueSet>
</CustomField>