force-app/main/default/objects/Artefact__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Artefacts (Payer)</relationshipLabel>
    <relationshipName>Artefacts1</relationshipName>
    <type>Lookup</type>
</CustomField>