force-app/main/default/objects/Artefact__c/fields/PayerFirstName__c.field-meta.xml
<CustomField>
    <fullName>PayerFirstName__c</fullName>
    <label>Payer First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>