force-app/main/default/objects/Artefact__c/fields/PayerLastName__c.field-meta.xml
<CustomField>
    <fullName>PayerLastName__c</fullName>
    <label>Payer Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>