force-app/main/default/objects/Artefact__c/fields/PayerName_fx__c.field-meta.xml
<CustomField>
    <fullName>PayerName_fx__c</fullName>
    <formula>Payer__r.FirstName &amp; &quot; &quot; &amp; Payer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payer Name</label>
    <type>Text</type>
</CustomField>