force-app/main/default/objects/Artefact__c/fields/PaymentURL__c.field-meta.xml
<CustomField>
    <fullName>PaymentURL__c</fullName>
    <label>Make a payment</label>
    <type>Url</type>
</CustomField>