force-app/main/default/objects/Artefact__c/fields/ProjectCMNumber__c.field-meta.xml
<CustomField>
    <fullName>ProjectCMNumber__c</fullName>
    <formula>Project__r.Name</formula>
    <label>Project CM Number</label>
    <type>Text</type>
</CustomField>