force-app/main/default/objects/Artefact__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <formula>Project__r.ProjectName__c</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>