force-app/main/default/objects/Artefact__c/fields/SAPCustomer__c.field-meta.xml
<CustomField>
    <fullName>SAPCustomer__c</fullName>
    <label>SAP Customer</label>
    <length>16</length>
    <type>Text</type>
</CustomField>