force-app/main/default/objects/Artefact__c/fields/SAPNotificationNumber__c.field-meta.xml
<CustomField>
    <fullName>SAPNotificationNumber__c</fullName>
    <label>SAP Notification Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>