force-app/main/default/objects/Artefact__c/fields/SAPNumber__c.field-meta.xml
<CustomField>
    <fullName>SAPNumber__c</fullName>
    <externalId>true</externalId>
    <label>SAP Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>