force-app/main/default/objects/Artefact__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Salesforce Cloud</fullName>
            </value>
            <value>
                <fullName>SiteCore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>