force-app/main/default/objects/Artefact__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Pending Payment&quot;</defaultValue>
    <description>Status field with values</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Payment</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Pending Reconciliation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>