force-app/main/default/objects/Artefact__c/fields/TotalGst__c.field-meta.xml
<CustomField>
    <fullName>TotalGst__c</fullName>
    <label>Total Gst</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>