force-app/main/default/objects/Artefact__c/recordTypes/Contract.recordType-meta.xml
<RecordType>
    <fullName>Contract</fullName>
    <active>true</active>
    <description>Record type for contract</description>
    <label>Contract</label>
</RecordType>