force-app/main/default/objects/Artefact__c/recordTypes/Invoice.recordType-meta.xml
<RecordType>
    <fullName>Invoice</fullName>
    <active>true</active>
    <description>Record type for invoice</description>
    <label>Invoice</label>
</RecordType>