force-app/main/default/objects/Artefact__c/recordTypes/Offer.recordType-meta.xml
<RecordType>
    <fullName>Offer</fullName>
    <active>true</active>
    <description>Record type for offer</description>
    <label>Offer</label>
</RecordType>