force-app/main/default/objects/Artefact__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>Record type for other</description>
    <label>Other</label>
</RecordType>